# xe_nhuy

./: .gitignore  best_fire_model.pth  best_fire_model_v1.pth  blink.c  blynk1.c  fblr_auto_run.c  fblr_ctrl.c  fblr_ctrl.py  fblr_live_auto.c  fblrao_ctrl.c  fblraop_ctrl.c  fblraopwd.c  fblraopwdc.c  fblraopws.c  fire_cam_data_collection.py  fire_cam_raw.py  fire_cls_cam.py  fire_cls_image.py  fire_cls_live.py  fire_cls_live_alert.py  fire_cls_live_auto.py  fire_cls_live_cam_collect.py  fire_cls_no_fire_collect.py  fire_cls_train.ipynb  fire_consumer.py  fire_det_cam.py  fire_det_cam_ctrl.py  fire_det_cam_ctrl_mul.py  fire_det_cam_ctrl_opt.py  fire_detector.py  fire_model.py  led_control.c  led_control.py  led_control_web.py  led_ctrl_udp.c  led_ctrl_udp.py  motor_auto_run.c  process_data_random_sampling.py  pyproject.toml  scan_net.py  (+1 more)
