[project]
name = "xe-nhuy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "flask>=3.1.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "requests>=2.32.5",
    "scapy>=2.6.1",
]
